2010-06-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (top): Require url-util.
	(tramp-gvfs-mount-point): Removed.
	(tramp-gvfs-stringify-dbus-message, tramp-gvfs-send-command): New
	defuns.
	(with-tramp-dbus-call-method): Format trace message.
	(tramp-gvfs-handle-copy-file, tramp-gvfs-handle-rename-file):
	Implement backup call, when operation on local files fails.  Use
	progress reporter.  Flush properties of changed files.
	(tramp-gvfs-handle-make-directory): Make more traces.
	(tramp-gvfs-url-file-name): Hexify file name in url.
	(tramp-gvfs-fuse-file-name): Take also prefix (like dav shares)
	into account for the resulting file name.
	(tramp-gvfs-handler-askquestion): Return dummy mountpoint, when
	the answer is "no".  See `tramp-gvfs-maybe-open-connection'.
	(tramp-gvfs-handler-mounted-unmounted)
	(tramp-gvfs-connection-mounted-p): Test also for new mountspec
	attribute "default_location".  Set "prefix" property.
	(tramp-gvfs-mount-spec): Return both prefix and mountspec.
	(tramp-gvfs-maybe-open-connection): Test, whether mountpoint
	exists.  Raise an error, if not (due to a corresponding answer
	"no" in interactive questions, for example).

2010-05-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-debug-message): Add `tramp-compat-funcall' to
	ignored backtrace functions.
	(with-progress-reporter): Expand docstring.
	(tramp-handle-delete-file): Implement TRASH argument.
	(tramp-get-remote-trash): New defun.

2010-05-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-delete-file): Use `symbol-value'
	for backward compatibility.

	* tramp.el (tramp-handle-make-symbolic-link, tramp-handle-load)
	(tramp-do-copy-or-rename-file-via-buffer)
	(tramp-do-copy-or-rename-file-directly)
	(tramp-do-copy-or-rename-file-out-of-band)
	(tramp-handle-process-file, tramp-handle-call-process-region)
	(tramp-handle-shell-command, tramp-handle-file-local-copy)